--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">      
-    <title>Anuo portfolio</title>
+    <title>Anup portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <section class="top-Banner">
+    <div class="half-width">
+        <h1>WELCOME TO</h1>
+        <h1><span class="orange-color">ANUP-GH</span> WORLD...</h1>
+        <h3>Building climber and train stopper</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil nesciunt placeat atque eveniet cum. Illo minima dolorum perferendis odit maiores exercitationem doloribus nobis vero, nemo cum soluta ipsum rerum sed.</p>
+        <a class="link-Button" target="blank" href="https://web.programming-hero.com/web-5/video/web-5-4-5-put-container-side-by-side-image-size-link-button-style">Hire Me</a>
+    </div>
     
+    <div class="half-width"><img src="images/jhankar.png" alt=""></div>
+    
+   </section>
 </body>
 </html>
