--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
         <h1><span class="orange-color">ANUP-GH</span> WORLD...</h1>
         <h3>Building climber and train stopper</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil nesciunt placeat atque eveniet cum. Illo minima dolorum perferendis odit maiores exercitationem doloribus nobis vero, nemo cum soluta ipsum rerum sed.</p>
-        <a class="link-Button" target="blank" href="https://web.programming-hero.com/web-5/video/web-5-4-5-put-container-side-by-side-image-size-link-button-style">Hire Me</a>
+        <a class="link-Button" target="_blank" href="https://web.programming-hero.com/web-5/video/web-5-4-5-put-container-side-by-side-image-size-link-button-style">Hire Me</a>
     </div>
     
     <div class="half-width"><img src="images/jhankar.png" alt=""></div>
     
    </section>
+   <section class="dream-big">
+       <div class="half-width">
+           <img src="images/jhankar2.png" alt="">
+       </div>
+       <div class="half-width">
+           <h1>Dream Big</h1>
+           <h2>Become a Web Developer</h2>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto nisi, et quasi reprehenderit, modi aut, odio iure sapiente vero possimus cupiditate blanditiis tempora delectus consectetur dolorum rerum praesentium est magnam?</p>
+           <a class="link-Button" target="_blank" href="https://web.programming-hero.com/web-5/video/web-5-4-5-put-container-side-by-side-image-size-link-button-style">DOWNLOAD RESUME</a>
+       </div>
+   </section>
+
 </body>
 </html>
