--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section class="top-Banner">
+   <section class="top-Banner flexible-container">
     <div class="half-width">
         <h1>WELCOME TO</h1>
         <h1><span class="orange-color">ANUP-GH</span> WORLD...</h1>
@@ -23,7 +23,7 @@
     <div class="half-width"><img src="images/jhankar.png" alt=""></div>
     
    </section>
-   <section class="dream-big">
+   <section class="dream-big flexible-container">
        <div class="half-width">
            <img src="images/jhankar2.png" alt="">
        </div>
@@ -34,6 +34,25 @@
            <a class="link-Button" target="_blank" href="https://web.programming-hero.com/web-5/video/web-5-4-5-put-container-side-by-side-image-size-link-button-style">DOWNLOAD RESUME</a>
        </div>
    </section>
+   <section class="exprience">
+       <h1>Expriences</h1>
+      <div class="flexible-container">
+        <div id="full-stack-experience" class="experience-item">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-color">2022-Present/ Pro Level Developer</h3>
+            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo asperiores, quos quod maiores distinctio et. Voluptatum, quidem. Voluptatem quaerat ipsum molestias nisi ut saepe aperiam sint delectus rerum, magni ullam!</P>
+        </div>
+        <div  id="web-dev-experience"  class="experience-item">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-color">2022-2024/Hero Learner</h3>
+            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo asperiores, quos quod maiores distinctio et. Voluptatum, quidem. Voluptatem quaerat ipsum molestias nisi ut saepe aperiam sint delectus rerum, magni ullam!</P>
+        </div>
+      </div>
 
+
+   </section>
+<footer>
+    <p>@peter parker 2021, a prpgramming Hero Initiative.</p>
+</footer>
 </body>
 </html>
